fix instructions visibility

--- a/src/Components/VirtualGallery/NavigationInstructions.css
+++ b/src/Components/VirtualGallery/NavigationInstructions.css
@@ -1,8 +1,8 @@
 .navigation-instructions{
     position: absolute;
     bottom: 0;
-    left: 0;
-    width: 400px;
+    left: 50%;
+    width: 460px;
     height: 200px;
     display: flex;
     justify-content: center;
@@ -11,16 +11,20 @@
     text-align: center;
     pointer-events: none;
     touch-action: none;
+    transform: translateX(-230px);
 }
 
 .instructions{
     position: relative;
-    width: 150px;
+    width: 200px;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    opacity: 0.2;
+    opacity: 0.7;
+    color: red;
+    font-weight: 900;
+    text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
 .instructions img {
